--- a/index.html
+++ b/index.html
@@ -3,9 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>my first website</title>
+    <title>My First Website</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #F0F0F0;
+        }
+        nav {
+            background-color: #31EC56;
+            padding: 10px;
+            display: flex;
+            justify-content: space-around;
+        }
+        nav a {
+            text-decoration: none;
+            color: white;
+            background-color: #EF036C;
+            padding: 10px 20px;
+            border-radius: 5px;
+            font-size: 1em;
+            font-weight: bold;
+        }
+        nav a:hover {
+            background-color: #EE72F8;
+        }
+        h1 {
+            font-size: 2em;
+            font-weight: bold;
+            color: #31EC56;
+            text-align: center;
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
+    <nav>
+        <a href="#home">Home</a>
+        <a href="#resume">Resume</a>
+    </nav>
+    <h1>Welcome to Cyberific!</h1>
     <p>Hello world</p>
 </body>
 </html>
