--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
           </div>
 
           <div class="hero-links">
-            <a href="mailto:you@example.com" class="btn btn-primary">Contact Me</a>
+            <a href="mailto:daynedelano@outlook.com" class="btn btn-primary">Contact Me</a>
             <a href="https://linkedin.com/in/yourprofile" target="_blank" class="btn btn-secondary">LinkedIn</a>
             <a href="https://github.com/yourusername" target="_blank" class="btn btn-secondary">GitHub</a>
             <button class="btn btn-secondary" onclick="window.print()">Download PDF</button>
