--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
 
           <div class="hero-links">
             <a href="mailto:daynedelano@outlook.com" class="btn btn-primary">Contact Me</a>
-            <a href="https://linkedin.com/in/yourprofile" target="_blank" class="btn btn-secondary">LinkedIn</a>
+            <a href="https://linkedin.com/in/dayne-delano-0697ab204" target="_blank" class="btn btn-secondary">LinkedIn</a>
             <a href="https://github.com/yourusername" target="_blank" class="btn btn-secondary">GitHub</a>
             <button class="btn btn-secondary" onclick="window.print()">Download PDF</button>
           </div>
