--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
         
         <div class="hero-text">
           <h1>Dayne Delano</h1>
-          <h2>IT & Cybersecurity Professional</h2>
+          <h2>Information Technology & Cybersecurity Professional</h2>
           
           <div class="hero-meta">
             <div class="hero-meta-item">Sacramento, CA</div>
