--- a/index.html
+++ b/index.html
@@ -611,15 +611,15 @@
           
           <div class="hero-meta">
             <div class="hero-meta-item">Sacramento, CA</div>
-            <div class="hero-meta-item">Open to Remote/Hybrid</div>
-            <div class="hero-meta-item">you@example.com</div>
-            <div class="hero-meta-item">(555) 555-5555</div>
+            <div class="hero-meta-item">Open to On-Site/Remote/Hybrid</div>
+            <div class="hero-meta-item">daynedelano@outlook.com</div>
+            <div class="hero-meta-item">(530) 613-0682</div>
           </div>
 
           <div class="hero-links">
             <a href="mailto:daynedelano@outlook.com" class="btn btn-primary">Contact Me</a>
             <a href="https://linkedin.com/in/dayne-delano-0697ab204" target="_blank" class="btn btn-secondary">LinkedIn</a>
-            <a href="https://github.com/yourusername" target="_blank" class="btn btn-secondary">GitHub</a>
+            <a href="https://github.com/daynedelano" target="_blank" class="btn btn-secondary">GitHub</a>
             <button class="btn btn-secondary" onclick="window.print()">Download PDF</button>
           </div>
         </div>
