--- a/index.html
+++ b/index.html
@@ -746,13 +746,13 @@
         <div class="timeline-item">
           <div class="timeline-header">
             <div>
-              <div class="timeline-title">IT Operations Specialist</div>
-              <div class="timeline-company">Tech Company Inc. • Sacramento, CA</div>
+              <div class="timeline-title">IT Operations Director</div>
+              <div class="timeline-company">Vision Quest Information Solutions, Inc. • Sacramento, CA</div>
             </div>
             <div class="timeline-date">Jan 2022 – Present</div>
           </div>
           <div class="timeline-description">
-            Leading infrastructure management and security initiatives for a mid-sized technology firm with 500+ endpoints.
+            Leading risk management and and security initiatives for a technology firm with 1500+ endpoints.
           </div>
           <ul class="timeline-achievements">
             <li>Achieved 95% SLA compliance rate by implementing automated ticket triage system using PowerShell, reducing average resolution time by 30%</li>
@@ -765,8 +765,8 @@
         <div class="timeline-item">
           <div class="timeline-header">
             <div>
-              <div class="timeline-title">IT Support Engineer</div>
-              <div class="timeline-company">Previous Company LLC • Remote</div>
+              <div class="timeline-title">Cybersecurity Specialist</div>
+              <div class="timeline-company">Vision Quest Information Solutions • Remote</div>
             </div>
             <div class="timeline-date">Jun 2020 – Dec 2021</div>
           </div>
@@ -783,10 +783,10 @@
         <div class="timeline-item">
           <div class="timeline-header">
             <div>
-              <div class="timeline-title">Help Desk Technician</div>
-              <div class="timeline-company">MSP Services Inc. • Sacramento, CA</div>
+              <div class="timeline-title">IT Support Professional</div>
+              <div class="timeline-company">Vision Quest Information Solutions Inc. • Sacramento, CA</div>
             </div>
-            <div class="timeline-date">Mar 2019 – May 2020</div>
+            <div class="timeline-date">Dec 2021 – Aug 2022</div>
           </div>
           <div class="timeline-description">
             Delivered frontline technical support for multiple clients across various industries.
