--- a/index.html
+++ b/index.html
@@ -749,7 +749,7 @@
               <div class="timeline-title">IT Operations Director</div>
               <div class="timeline-company">Vision Quest Information Solutions, Inc. • Sacramento, CA</div>
             </div>
-            <div class="timeline-date">Jan 2022 – Present</div>
+            <div class="timeline-date">Feb 2025 – Present</div>
           </div>
           <div class="timeline-description">
             Leading risk management and and security initiatives for a technology firm with 1500+ endpoints.
@@ -768,7 +768,7 @@
               <div class="timeline-title">Cybersecurity Specialist</div>
               <div class="timeline-company">Vision Quest Information Solutions • Remote</div>
             </div>
-            <div class="timeline-date">Jun 2020 – Dec 2021</div>
+            <div class="timeline-date">Sept 2022 – Jan 2025</div>
           </div>
           <div class="timeline-description">
             Provided L2/L3 technical support and maintained infrastructure for distributed workforce of 300+ users.
@@ -789,7 +789,7 @@
             <div class="timeline-date">Dec 2021 – Aug 2022</div>
           </div>
           <div class="timeline-description">
-            Delivered frontline technical support for multiple clients across various industries.
+            Delivered frontline technical support for multiple clients across various industries, Public and Private.
           </div>
           <ul class="timeline-achievements">
             <li>Maintained 98% customer satisfaction score while resolving 50+ tickets daily</li>
